# 2048

./: .clang-format  .gitignore  2048_zh_CN.ts  CMakeLists.txt  Game.cpp  Game.h  README.md  base_class.h  board.cpp  board.h  main.cpp  mainwindow.cpp  mainwindow.h  public_def.cpp  public_def.h  public_func.cpp  public_func.h  qgameboard.cpp  qgameboard.h  qtile.cpp  qtile.h
code/: board.cpp  game.h  logger.cpp  logger.h  main.cpp  mainwindow.h  public_def.cpp  public_def.h  public_func.cpp  public_macro.h  qgameboard.cpp  qgameboard.h  qtile.cpp
